(CSS Update; Twitter Logo moved on mobile fix)

--- a/CSS/socialMedia.css
+++ b/CSS/socialMedia.css
@@ -2918,10 +2918,6 @@ h4 {
   #Pinterest {
     top: 18%;
   }
-
-  #Twitter-Logo {
-    left: -350%;
-  }
 }
 
 /* Galaxy S5 */
